fix(messages): unify nascraft admin command output